--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "dependencies": {
     "axios": "^0.16.2",
     "body-parser": "^1.18.2",
+    "bootstrap": "^3.3.7",
     "cors": "^2.8.4",
     "express": "^4.16.2",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-scripts": "1.0.14"
+    "react-scripts": "1.0.14",
+    "validate.js": "^0.12.0"
   },
   "scripts": {
     "start": "run-p start-server start-react",
